DEVELOPER-1234 Fixed the alignment of multi-lines in bulleted text globally

--- a/stylesheets/_champions.scss
+++ b/stylesheets/_champions.scss
@@ -7,8 +7,7 @@
     padding-bottom: 5px;
 
     li {
-      padding-left: 20px;
-      text-indent: -1em;
+      padding-left: 10px;
     }
   }
 }
